# proctoring-bot

./: .gitignore  Pipfile  pyproject.toml  requirements.txt
docs/features/: moderate_students_name.md  set_admissions.md
scripts/: install_dependencies.sh  run_bot.sh
sources/: main.py
sources/bot/modules/chains/config/: config_handlers_chain.py
sources/bot/modules/chains/deadline/: deadline_handlers_chain.py
sources/bot/modules/chains/main/: main_handlers_chain (1).py  main_handlers_chain.py
sources/bot/modules/chains/spreadsheet/: spreadsheet_creation_handlers_chain.py
sources/bot/modules/chains/subject/: subject_handlers_chain.py
sources/bot/modules/chains/survey/: teacher_handlers_chain.py
sources/bot/modules/factory/: standard_handlers_factory.py
sources/bot/storage/: base_spreadsheet_storage.py  spreadsheet_storage.py
sources/bot/storage/factory/: spreadsheet_storage_factory.py  storage_factory.py
sources/bot/storage/model/: lesson.py  schedule.py  schedule_day.py
sources/bot/storage/service/: schedule_service.py
sources/bot/storage/spreadsheet/: spreadsheet_creation_handler.py  spreadsheet_handler.py
sources/tools/configurator/: bot_configurator.py  spreadsheet_configurator.py
src/: bot_starter.py  constants.py  exceptions.py  loggers.py  main.py  proctoring_bot.py  settings.ini
src/callee/: keyboard_builder.py  registration_dialog_callee.py  registration_expectation_callee.py
src/data/: keyboards.py  user_data_manager.py
src/logic/: entry_checker.py
src/user_data/: spreadsheet_handler.py
(+13 files in other folders)
