[tool.poetry]
name = "proctoring-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
aiohttp = "3.10.0"
aiogram = "^3.15.0"
async-timeout = "4.0.3"
google-api-core = "^2.24.0"
google-api-python-client = "^2.156.0"
google-auth = "^2.37.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
googleapis-common-protos = "^1.66.0"
httplib2 = "^0.22.0"
oauth2client = "^4.1.3"
oauthlib = "^3.2.2"
pylint = "^3.3.2"
black = "^24.10.0"
validators = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
